# taskflow-kanban-studio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: ai.py  auth.py  db.py  main.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py
docs/: PLAN.md  database.md  schema.json  tutorial.md
frontend/: playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/app/api/ai/chat/: route.ts
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/board/: route.ts
frontend/src/app/api/board/cards/: route.ts
frontend/src/app/api/board/cards/[cardId]/: route.ts
frontend/src/app/api/board/cards/[cardId]/move/: route.ts
frontend/src/app/api/board/columns/[columnId]/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: AiSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginPage.test.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts
frontend/tests/: demo-full.spec.ts  demo.spec.ts  kanban.spec.ts  screenshot-demo.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
static/: index.html
